--- a/templates/alternatives.html
+++ b/templates/alternatives.html
@@ -202,7 +202,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Balıkçılık</a></h3>
+									<h3>Balıkçılık</h3>
 									<p>Ramsko gölünde sazan, yayın avcılığı yapacaklar oltalarınızı hazırlayın. </p>
 								</div>
 							</div>
@@ -215,7 +215,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Orman kampı</a></h3>
+									<h3>Orman kampı</h3>
 									<p>Boracko veya dileyenler için Ramsko gölünde çadır kurup balık avlamak isteyenlere duyurulur!</p>
 								</div>
 							</div>
@@ -228,7 +228,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Yamaç Paraşütü</a></h3>
+									<h3>Yamaç Paraşütü</h3>
 									<p>Yamaç Paraşütü</p>
 								</div>
 							</div>
@@ -243,7 +243,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Treking</a></h3>
+									<h3>Treking</h3>
 									<p>Doğa severler için Bosna tabiatı ve ormanlarıyla birer cennet. Bu cennet diyarın tabiatını yakından tanımak isteyenler için Bijela voda’da uzman eşliğinde trekkinge ver mısınız?</p>
 								</div>
 							</div>
@@ -256,7 +256,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Atıcılık</a></h3>
+									<h3>Atıcılık</h3>
 									<p>Saraybosna’da Vidikovac tepesinde eski askeri garnizonda atıcılığa meraklı misafirlerimiz için oldukça uygun şartlarda atıcılık heyecanı.</p>
 								</div>
 							</div>
@@ -269,7 +269,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Mağara Gezisi</a></h3>
+									<h3>Mağara Gezisi</h3>
 									<p>Bir çok farklı türde mağararaya sahip Bosna’da dileyen misafirlerimize veya araştırmacılara özel mağara gezisi. Bijambare, megara, Vjetranica bunlardan birkaçı.</p>
 								</div>
 							</div>
@@ -285,7 +285,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">At Binicilik</a></h3>
+									<h3>At Binicilik</h3>
 									<p>Saraybosna’da gençler ve heveslileri için dopdolu bir an.</p>
 								</div>
 							</div>
@@ -298,7 +298,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Piramitler</a></h3>
+									<h3>Piramitler</h3>
 									<p>Saraybosna’nın eski yerleşim yeri olan (Vrh Bosna) Visoko’da dünyanın bilinen insan yapımı en büyük piramidini beraber gezelim. Saraybosna’dan sadece yarım saat uzaklıkta olan piramitler ziyaretçilerini bekliyor.</p>
 								</div>
 							</div>
@@ -311,7 +311,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Buz Pateni</a></h3>
+									<h3>Buz Pateni</h3>
 									<p>Buz Pateni </p>
 								</div>
 							</div>
@@ -327,7 +327,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Kayak</a></h3>
+									<h3>Kayak</h3>
 									<p>Kış aylarında Bjelasnica ve Trabevic kayak merkezlerinde dopdolu bir gün. </p>
 								</div>
 							</div>
@@ -340,7 +340,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Rafting</a></h3>
+									<h3>Rafting</h3>
 									<p>Konjic’te Neretva nehri üzerinde 23 km’lik uzun parkuruyla capcanlı 3.5 saatlik adrenalin dolu bir heyecan.  </p>
 								</div>
 							</div>
@@ -353,7 +353,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Tito'nun Sığınağı</a></h3>
+									<h3>Tito'nun Sığınağı</h3>
 									<p>Konjic’te yakın zamana kadar  bir sır olan Tito’nun atom sığınağına özel gezi.</p>
 								</div>
 							</div>
@@ -369,7 +369,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Eşek Çiftiği</a></h3>
+									<h3>Eşek Çiftiği</h3>
 									<p>Oldukça değerli eşek peynirinin üretimi ve çiftliğin gezilmesi.</p>
 								</div>
 							</div>
@@ -382,7 +382,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">SOS Köyü</a></h3>
+									<h3>SOS Köyü</h3>
 									<p>Bosna’lı yetim ve öksüz çocukların kaldığı yetimhanelere ziyaret. Yetimhanede kalan çocukları sevindirmek, onlara güzel bir vakit geçirtmek isteyen misafirlerimize özel.</p>
 								</div>
 							</div>
@@ -395,7 +395,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Kaplıcalar</a></h3>
+									<h3>Kaplıcalar</h3>
 									<p>İster Vişegrad’da tarihi Sokollu hamamlarında olsun, ister Fojnica’da kaplıca olsun, isterse de Ilıca’da termalsauna ve fizik tedavi olsun dileyen bütün misafirlerimiz için ulaşım ve rehberlikle hizmetinizdeyiz. </p>
 								</div>
 							</div>
