--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -2,7 +2,8 @@
 				<div class="topbar">
 					<ul class="loginbar pull-right">
 						<li>{% placeholder 'English Link' %}</li>
-						<i class="fa fa-globe fa-lg " aria-hidden="true" ></i>
+						<li><a href="http://www.brighttravel.tours">ENGLISH</a></li>
+						<a href="http://www.brighttravel.tours" alt="ENGLISH"><img src="{%static "img-temp/logo/UK-flag.png"%}" height="12" width="18" title="ENGLISH"></a>
 						<li class="topbar-devider"></li>
 						<li><a href="/aboutus">HAKKIMIZDA</a></li>
 						<li class="topbar-devider"></li>
