--- a/templates/rentacar.html
+++ b/templates/rentacar.html
@@ -113,7 +113,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">Mersedes C200 (otomatik vites)</a></h3>
+									<h3><Mersedes C200 (otomatik vites)</h3>
 									<small>2009 | SİYAH | 2.2 diesel</small>
 								</div>
 							</div>
@@ -126,7 +126,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">VOLKSWAGEN	TOURAG (aut)	</a></h3>
+									<h3><VOLKSWAGEN	TOURAG (aut)	</h3>
 									<small>2006 | LACİVERT | 2.5 diesel</small>
 								</div>
 							</div>
@@ -143,7 +143,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">SKODA FABIA</a></h3>
+									<h3><SKODA FABIA</h3>
 									<small>2011 | LACİVERT | 1.6 tdi</small>
 								</div>
 							</div>
@@ -156,7 +156,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">FORD FIESTA (Otomatik vites)</a></h3>
+									<h3><FORD FIESTA (Otomatik vites)</h3>
 									<small>2009 | KIRMIZI | 1.2 benzin</small>
 								</div>
 							</div>
@@ -173,7 +173,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">VOLKSWAGEN	GOLF</a></h3>
+									<h3><VOLKSWAGEN	GOLF</h3>
 									<small>2012 | GÜMÜŞ | 1.2 benzin</small>
 								</div>
 							</div>
@@ -186,7 +186,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">HYUNDAI	İ30	</a></h3>
+									<h3><HYUNDAI	İ30	</h3>
 									<small>2010 | SİYAH | 1.6 diesel</small>
 								</div>
 							</div>
@@ -203,7 +203,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">SEAT ALTEA XL (Otomatik vites)</a></h3>
+									<h3><SEAT ALTEA XL (Otomatik vites)</h3>
 									<small>	2010 | SİYAH | 1.8 benzin</small>
 								</div>
 							</div>
@@ -216,7 +216,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">SKODA FABIA</a></h3>
+									<h3><SKODA FABIA</h3>
 									<small>2011 | KIRMIZI | 1.2 tsi</small>
 								</div>
 							</div>
@@ -233,7 +233,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">MAZDA	5 VIP</a></h3>
+									<h3><MAZDA	5 VIP</h3>
 									<small>2011	| GÜMÜŞ | 2.0 benzin</small>
 								</div>
 							</div>
@@ -246,7 +246,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">MAZDA 5</a></h3>
+									<h3><MAZDA 5</h3>
 									<small>2012	| SİYAH | 2.0 benzin</small>
 								</div>
 							</div>
@@ -263,7 +263,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">FORD FIESTA</a></h3>
+									<h3><FORD FIESTA</h3>
 									<small>2011 | SİYAH	| 1.2 benzin</small>
 								</div>
 							</div>
@@ -276,7 +276,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">SKODA FABIA (Karavan)</a></h3>
+									<h3><SKODA FABIA (Karavan)</h3>
 									<small>2012 | BEYAZ | 1.9 diesel</small>
 								</div>
 							</div>
@@ -293,7 +293,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">CHEVROLET	AVEO	</a></h3>
+									<h3><CHEVROLET	AVEO	</h3>
 									<small>2010 | BEYAZ | 1.2 benzin</small>
 								</div>
 							</div>
@@ -306,7 +306,7 @@
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">VOLKSWAGEN TOURAN</a></h3>
+									<h3><VOLKSWAGEN TOURAN</h3>
 									<small>2008 | BLACK | 1.9 dizel</small>
 								</div>
 							</div>
