--- a/templates/footer.html
+++ b/templates/footer.html
@@ -29,7 +29,8 @@
 								<li><i class="fa fa-mobile"></i><font color="white">+387-61-089517</font></li>
 								<li>
 									<a href="/"><img id="logo-footer"  src="{% static "img/dikey_logo_100x80pxl.png"%}"  height="80" width="100"  alt=""></a>
-
+									&nbsp<a href="http://www.brighttravel.tours"><img style="vertical-align:bottom" src="{%static "img-temp/logo/UK-flag.jpg"%}" height="24" width="36" title="ENGLISH"></a>
+   						    		&nbsp<a href="http://www.bright.tours"><img style="vertical-align:bottom" src="{%static "img-temp/logo/TR-flag.jpg"%}" height="24" width="36" title="TÜRKÇE"></a>
 								</li>
 							</ul>
 						</div><!--/col-md-3-->
@@ -83,21 +84,6 @@
 							</ul>
 						</div><!--/col-md-3-->
 						<!-- End Link List -->
-					</div>
-					<div class="row">
-						<div class="col-md-2 col-md-offset-9">
-							<ul class="list-unstyled  pull-right">
-								<li>{% placeholder 'English Link' %} | <font color="white"><a href="/" ><font color="white">TÜRKÇE</font></a>
-								</li>
-							</ul>
-						</div>
-						<div class="col-md-1 link-list  ">
-							<ul class="list-unstyled  pull-left">
-								<li>
-									<i class="fa fa-globe fa-5x " aria-hidden="true" style="line-height:10px;vertical-align:top;zoom:1;*display:inline"></i>
-								</li>
-							</ul>
-						</div>
 					</div>
 				</div>
 			</div><!--/footer-->
