--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -1,9 +1,11 @@
 {% load cms_tags staticfiles%}
 				<div class="topbar">
 					<ul class="loginbar pull-right">
-						<li><a href="http://www.brighttravel.tours">ENGLISH</a></li>
-						<a href="http://www.brighttravel.tours" alt="ENGLISH"><img src="{%static "img-temp/logo/UK-flag.png"%}" height="12" width="18" title="ENGLISH"></a>
-						<li class="topbar-devider"></li>
+						<li>
+						    <a href="http://www.brighttravel.tours"><img src="{%static "img-temp/logo/UK-flag.jpg"%}" height="12" width="20" title="ENGLISH"></a>
+   						    <a href="http://www.bright.tours"><img src="{%static "img-temp/logo/TR-flag.jpg"%}" height="12" width="20" title="TÜRKÇE"></a>
+                        </li>
+                        <li>&nbsp</li>
 						<li><a href="/aboutus">HAKKIMIZDA</a></li>
 						<li class="topbar-devider"></li>
 						<li><a href="/contact">İLETİŞİM</a></li>
